Simple animations for new cell entering.  (Still need to determine how to prevent column shifted cells from being considered new Div blocks and retriggering animations.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,3 +25,26 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+@keyframes enter{
+  from {
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+}
+@keyframes scaleEnter{
+  from {
+    scale: 0;
+  }
+  to{
+    scale: 1;
+  }
+}
+.enter{
+  animation: enter .4s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+}
+.scale-enter{
+  animation: scaleEnter .4s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+
+}
